@@ -1,1 +1,1 @@
-DIST mailpile-0.2.tar.gz 2173676 SHA256 1cb632c473e4605ac048962b0d71b4e810c63134f8537daa561c4bda4893d4ce SHA512 63484c60722b71176101b1fe1f7729c71562cb925b85c19e1ce0654081e4efd4520c321b17e469d99d39059e3b3ae749b3889fdaa122402c6f55b09c2d3f8495 WHIRLPOOL 1cfd2b980d524505e40952ccaf3beb0ee6752245ba513e12ebf774162516ef32ff1c5f4c3f8071a8ed93e1436474187efb3a622c3515e259f6608c2af3bd18cb
+DIST mailpile-0.4.3.tar.gz 2973099 SHA256 3253d4896cc34de6208a750dbecab895561e0ebf44eead28ea4572bf01f71c0d SHA512 a5b5ef46feba054a8668c7ad359b8f914a0bdb711571daccf0274f5ebbcdff8f3bc1bdb4ee06e6c10aff0b5cdd3d9516849fc140d7990e3a3992ad01bb693d82 WHIRLPOOL 69667b4c83f5421ac5866bf7a65be04104db3085d64c87fe3ee481d539b1abfaa30a50adc1e6bfb0df329150abb021da999f5b6c4f173b21f3f78337193ad869
