@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mailpile
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*mailpile-0.4.3 (23 Feb 2015)
+
+  23 Feb 2015; Justin Lecher <jlec@gentoo.org> +mailpile-0.4.3.ebuild,
+  -mailpile-0.2.ebuild, mailpile-9999.ebuild:
+  mail-client/mailpile: Version Bump; drop keywords from live ebuild
 
 *mailpile-9999 (10 Nov 2014)
 *mailpile-0.2 (10 Nov 2014)
@@ -8,4 +14,3 @@
   10 Nov 2014; Justin Lecher <jlec@gentoo.org> +mailpile-0.2.ebuild,
   +mailpile-9999.ebuild, +metadata.xml:
   New package
-
